--- a/Hosts/Common/CommonUI/CoveringTests/MainUserControl.xaml
+++ b/Hosts/Common/CommonUI/CoveringTests/MainUserControl.xaml
@@ -13,16 +13,20 @@
     </UserControl.Resources>
     <Grid>
         <Path 
-            Data="{Binding Path=GlyphShape}" 
-            Fill="{Binding Path=GlyphColor}" 
-            Stroke="{Binding Path=GlyphColor}" 
-            StrokeThickness="{Binding Path=GlyphStrokeThickness}"
+            Data="{Binding GlyphInfo.Shape}" 
+            StrokeThickness="{Binding GlyphInfo.OutlineThickness}"
         >
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseDown" >
                     <i:InvokeCommandAction Command="{Binding ShowPopupCommand}" />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
+            <Path.Fill>
+                <SolidColorBrush Color="{Binding GlyphInfo.Color}" />
+            </Path.Fill>
+            <Path.Stroke>
+                <SolidColorBrush Color="{Binding GlyphInfo.Color}" />
+            </Path.Stroke>
         </Path>
         <Popup 
             IsOpen="{Binding PopupVisible}"
@@ -30,14 +34,12 @@
             Placement="MousePoint"
             HorizontalOffset="-2"
             VerticalOffset="-2"
-            AllowsTransparency="True"
-            PopupAnimation="Fade"
         >
             <ListView 
                 ItemsSource="{Binding CoveringTests}" 
                 HorizontalContentAlignment="Stretch"
-                MinWidth="500"
-                MaxHeight="200"
+                MaxWidth="500"
+                MaxHeight="300"
             >
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -100,7 +102,7 @@
                             <TextBlock
                                 Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="1" Grid.RowSpan="1"
                             >
-                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding GotoTestCommand}">
+                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding GotoTestCommand}" CommandParameter="{Binding TestResult.TestCase}">
                                 <Image
                                     Source="Resources/actiongototest.png"
                                     Width="16" Height="16" Margin="3"
@@ -111,7 +113,7 @@
                             <TextBlock
                                 Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="1" Grid.RowSpan="1"
                             >
-                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding StartWithDebuggingCommand}">
+                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding DebugTestCommand}" CommandParameter="{Binding TestResult.TestCase}">
                                 <Image
                                     Source="Resources/actionstartwithdebug.png"
                                     Width="16" Height="16" Margin="3"
@@ -122,7 +124,7 @@
                             <TextBlock
                                 Grid.Column="4" Grid.Row="0" Grid.ColumnSpan="1" Grid.RowSpan="1"
                             >
-                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding StartWithoutDebuggingCommand}">
+                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding RunTestCommand}" CommandParameter="{Binding TestResult.TestCase}">
                                 <Image
                                     Source="Resources/actionstartwithoutdebug.png"
                                     Width="16" Height="16" Margin="3"
