--- a/Hosts/Common/CommonUI/CoveringTests/MainUserControl.xaml
+++ b/Hosts/Common/CommonUI/CoveringTests/MainUserControl.xaml
@@ -102,7 +102,7 @@
                             <TextBlock
                                 Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="1" Grid.RowSpan="1"
                             >
-                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding GotoTestCommand}" CommandParameter="{Binding TestResult.TestCase}">
+                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding GotoTestCommand}" CommandParameter="{Binding TestCase}">
                                 <Image
                                     Source="Resources/actiongototest.png"
                                     Width="16" Height="16" Margin="3"
@@ -113,7 +113,7 @@
                             <TextBlock
                                 Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="1" Grid.RowSpan="1"
                             >
-                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding DebugTestCommand}" CommandParameter="{Binding TestResult.TestCase}">
+                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding DebugTestCommand}" CommandParameter="{Binding TestCase}">
                                 <Image
                                     Source="Resources/actionstartwithdebug.png"
                                     Width="16" Height="16" Margin="3"
@@ -123,8 +123,9 @@
                             </TextBlock>
                             <TextBlock
                                 Grid.Column="4" Grid.Row="0" Grid.ColumnSpan="1" Grid.RowSpan="1"
+                                Visibility="Collapsed"
                             >
-                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding RunTestCommand}" CommandParameter="{Binding TestResult.TestCase}">
+                            <Hyperlink TextDecorations="{x:Null}" Command="{Binding RunTestCommand}" CommandParameter="{Binding TestCase}">
                                 <Image
                                     Source="Resources/actionstartwithoutdebug.png"
                                     Width="16" Height="16" Margin="3"
