--- a/Hosts/Common/CommonUI/CoveringTests/MainUserControl.xaml
+++ b/Hosts/Common/CommonUI/CoveringTests/MainUserControl.xaml
@@ -146,7 +146,8 @@
                             </TextBlock>
                             <TextBox 
                                 Grid.Column="5" Grid.Row="0" Grid.ColumnSpan="1" Grid.RowSpan="1"
-                                Text="{Binding FullyQualifiedName}"
+                                Text="{Binding DisplayName}"
+                                ToolTip="{Binding FullyQualifiedName}"
                                 Style="{StaticResource TestCaseFields}"
                             />
                             <Grid
